--- a/project/spring_boot_app/src/main/resources/application.properties
+++ b/project/spring_boot_app/src/main/resources/application.properties
@@ -2,4 +2,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/services
 spring.datasource.username=standard_user
 spring.datasource.password=user
-
+#Keycloak Configuration
+keycloak.auth-server-url=http://35.186.198.0/auth
+keycloak.realm=shilo-na-milo
+keycloak.resource=shilo
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
