--- a/project/spring_boot_app/src/main/resources/application.properties
+++ b/project/spring_boot_app/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/services
 spring.datasource.username=standard_user
 spring.datasource.password=user
 #Keycloak Configuration
-keycloak.auth-server-url=http://localhost:8080/auth
-keycloak.realm=Univ
-keycloak.resource=shilo_na_milo
+keycloak.auth-server-url=http://35.186.198.0/auth
+keycloak.realm=shilo_na_milo
+keycloak.resource=shilo
 keycloak.public-client=true
 keycloak.principal-attribute=preferred_username
