Added server.port into config.

--- a/project/spring_boot_app/src/main/resources/application.properties
+++ b/project/spring_boot_app/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/services
 spring.datasource.username=standard_user
 spring.datasource.password=user
+server.port=8090
 #Keycloak Configuration
 keycloak.auth-server-url=http://35.186.198.0/auth
 keycloak.realm=shilo_na_milo
